public/css/application.css
* {
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

body {
	background-image: url('http://www.edudemic.com/wp-content/uploads/2014/02/Hello-in-8-languages.jpg');
	background-repeat:no-repeat;
	background-attachment: fixed;
	background-size: 100% auto;
}

header {
	margin-top: 0;
	padding: 20px 0;
	background-color: #FF6600;
	opacity: 0.8;
	min-height: 130px;
}

header:hover {
	opacity: 1.0;
}

nav {
	width: 16%;
	float: right;
	margin-right: 20px;
	display: inline-block;
}

nav p {
	font-weight: bold;
	color: #FFF;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	text-decoration: none;
	font-size: 16px;
}

nav a {
	font-weight: normal;
	color: #FFF;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	text-decoration: none;
	font-size: 16px;
}

nav a:hover {
	color: #FFCC66;
	text-decoration: none;
}

h1, h2 {
	font-size: 40px;
	color: #FFF;
	text-align: center;
}

h2 {
	font-size: 32px;
}

h3 {
	font-size: 24px;
	color: #555;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

.container {
	max-width: 900px;
	margin: 0 auto;
}

#user-input {
	text-align: center;
	margin: 0 auto;
	padding-top: 20px;
}

#login-email, #login-password, #create-email, #create-password {
	border: 3px solid #FFCC66;
	margin: 10px; 
	border-radius: 8px;
	line-height: 1.4em;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 20px;
	color: #555;
	padding: 6px 12px;
	height: 40px;
	/*width: 300px;*/
	box-shadow: inset 0 1px 1px 0 rgba(0,0,0,.075);
	opacity: 0.8;
}

input {
	font: inherit;
	margin: 0;
}

button {
	display: block;
}

.deck-option {
	text-align: center;
	margin: 0 auto;
	padding-top: 30px;
}

#user-name {
	text-align: right;
}

#score {
	text-align: right;
}

#log-out {
	display: block;
	float: right;
}

#deck {
	border: 0px solid transparent;
	border-radius: 20px;
	color: #555;
	margin: 20px;
	padding: 12px 6px;
	background-color: #FFF;
	width: 300px;
}

#deck:hover {
	background-color: #FFCC66;
}

.title {
	width: 50%;
	display: inline;
}

.card {
	margin: 30px auto;
	border: 1px solid grey;
	border-radius: 4px;
	text-align: center;
	background-color: #FFF;
	max-width: 350px;
	opacity: 0.8;
	padding: 30px;
}

#answer-form {
	margin: 20px auto;
	max-width: 300px;
}

.quit-option {
	margin: 0 auto;
	text-align: center;
	padding: 30px;
}

.quit-option a {
	font-weight: normal;
	color: #555;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	text-decoration: none;
	font-size: 24px;
}

.user-stats {
	border: 1px solid grey;
	margin: 30px auto;
	text-align: center;
	background-color: #FFF;
	border-radius: 4px;
	max-width: 350px;
	opacity: 0.8;
	padding: 30px;
}

.user-stats p {
	color: #555;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	text-decoration: none;
	font-weight: normal;
	font-size: 24px;
}

.user-stats a {
	text-decoration: none;
	color: #555;
	font-weight: bold;
}

.user-stats a:hover {
	text-decoration: none;
	color: #FFCC66;
}

footer {
	position: absolute;
	left: 45%;
	bottom: 0;
	font-size: 12px;
	color: #909090;
}

#correct {
	color: green;
	font-weight: bold;
}

#incorrect {
	color: red;
	font-weight: bold;
}

